--- a/pages/components/index.wxml
+++ b/pages/components/index.wxml
@@ -3,14 +3,34 @@
     <scroll-view scroll-x scroll-into-view='item2'>
       <view wx:for="{{games.data}}" id='item1' class='item'>
         <view class='inner'>
-          <image class="components-image" data-id="{{item.id}}" bindtap="change" src="{{item.icon}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
+          <image id="{{index}}" class="components-image" data-id="{{item.id}}" bindtap="change" src="{{item.icon}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
         </view>
       </view>
     </scroll-view>
   </view>
   <!-- 推荐配置 -->
   <view class='comp'>
-    <scroll-view scroll-x scroll-into-view='item2' class="show">
+    <swiper style="width: 100%; height:1100px" >
+      <block wx:for="{{product}}">
+        <swiper-item>
+          <view class='content'>
+            <h2 wx:if="{{index === 0}}">标准配置</h2>
+            <h2 wx:if="{{index === 1}}">进阶配置</h2>
+            <h2 wx:if="{{index === 2}}">发烧配置</h2>
+            <view wx:for="{{item.item}}" class="components-config">
+              <span style="margin-left: 10px">{{item.categoryName}}:</span>
+              <div>
+                <image class="image" src="https://img30.360buyimg.com/diytwo/{{item.imagePath}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
+              </div>
+              <view style="width: 60%; float: right;">
+                <p class="span">{{item.name}}</p>
+              </view>
+            </view>
+          </view>
+        </swiper-item>
+      </block>
+    </swiper>
+    <!-- <scroll-view scroll-x scroll-into-view='item2' class="show">
       <view wx:for="{{product}}" wx:for-index="index" id='item1' class='item'>
         <view class='content'>
           <h2 wx:if="{{index === 0}}">标准配置</h2>
@@ -27,6 +47,6 @@
           </view>
         </view>
       </view>
-    </scroll-view>
+    </scroll-view> -->
   </view>
 </view>
