--- a/pages/components/index.wxss
+++ b/pages/components/index.wxss
@@ -4,6 +4,13 @@
   border-radius: 8px;
 }
 
+.check-components-image {
+  width: 100%;
+  height: 80px;
+  border-radius: 8px;
+  box-shadow:2px 1px 20px 9px #ccc;
+}
+
 .out {
   padding: 20px 10px;
   width: 100%;
@@ -47,7 +54,7 @@
 
 .content {
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .show {
@@ -75,11 +82,8 @@
   width: 200px;
   position: relative;
   float: right;
-  flex-wrap:wrap;
-  display: flex;
-  word-wrap: break-word;
-  word-break: break-all;
   overflow: hidden;
+  white-space: nowrap;
   margin-top: -25px;
 }
 
