--- a/pages/components/index.wxss
+++ b/pages/components/index.wxss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 80px;
   border-radius: 8px;
-  box-shadow:2px 1px 20px 9px #ccc;
+  box-shadow: 0px 2px 10px 0px #aaaaaa;
 }
 
 .out {
@@ -45,7 +45,7 @@
 
 .inner {
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .sp {
@@ -57,7 +57,8 @@
   /* overflow: hidden; */
 }
 
-view, text {
+view,
+text {
   word-break: break-all;
 }
 
