--- a/pages/components/index.wxss
+++ b/pages/components/index.wxss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 80px;
   border-radius: 8px;
-  box-shadow: 0px 2px 10px 0px #aaaaaa;
+  box-shadow: 0px 2px 10px 0px #666666;
 }
 
 .out {
