--- a/pages/components/index.wxml
+++ b/pages/components/index.wxml
@@ -3,7 +3,7 @@
     <scroll-view scroll-x scroll-into-view='item2'>
       <view wx:for="{{games.data}}" id='item1' class='item'>
         <view class='inner'>
-          <image id="{{index}}"  class="{{index == id ? 'check-components-image' : 'components-image'}}" data-id="{{item.id}}" bindtap="change" src="{{item.icon}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
+          <image id="{{index}}" class="{{index == id ? 'check-components-image' : 'components-image'}}" data-id="{{item.id}}" bindtap="change" src="{{item.icon}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
         </view>
       </view>
     </scroll-view>
@@ -18,11 +18,12 @@
             <h2 wx:if="{{index === 1}}">进阶配置</h2>
             <h2 wx:if="{{index === 2}}">发烧配置</h2>
             <view wx:for="{{item.item}}" class="components-config">
-              <span style="margin-left: 10px">{{item.categoryName}}:</span>
+              <span style="margin-left: 10px; line-height: 110px">{{item.categoryName}}:</span>
               <image class="image" src="https://img30.360buyimg.com/diytwo/{{item.imagePath}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
               <view style="width: 60%; float: right;">
                 <p class="span">{{item.name}}</p>
               </view>
+                
             </view>
           </view>
         </swiper-item>
