--- a/pages/components/index.wxss
+++ b/pages/components/index.wxss
@@ -82,33 +82,34 @@ text {
   color: #666666;
 }
 
-.span {
-  font-weight: bold;
-  width: 200px;
-  position: relative;
-  float: right;
-  overflow: hidden;
-  white-space: wrap;
-  margin-top: 10px;
-}
-
 h2 {
   font-weight: bold;
   margin-left: 10px;
 }
 
+.line {
+  margin: 0 auto;
+  width: 100%;
+  height: 1.5rpx;
+  background-color: #d8d8d8;
+}
+
 .name {
-  font-weight: bold;
+  font-weight: 599;
   width: 95%;
   position: relative;
   float: right;
-  margin-top: -5px;
+  margin-top: 5px;
   display: -webkit-box;
-  font-size: 28rpx;
+  font-size: 27rpx;
   /* line-height: 40rpx; */
   word-break: break-all;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.price {
+  font-weight: bold
 }
