--- a/pages/read/index.wxml
+++ b/pages/read/index.wxml
@@ -1,13 +1,38 @@
-<view class="read" hover-class="none" hover-stop-propagation="false">
-  <h1 class="title">{{desc.title}}</h1>
+<view style="{{ state === 'index' ? 'display: block' : 'display: none' }}" hover-class="none" hover-stop-propagation="false">
+  <view class="read" hover-class="none" hover-stop-propagation="false">
+    <h1 class="title">{{desc.title}}</h1>
+  </view>
+  <view class="span" hover-class="none" hover-stop-propagation="false">
+    <span class="author">作者：{{desc.source}}</span>
+    <span class="date">日期： {{desc.date}}</span>
+    <rich-text class="text" nodes="{{text}}" space="true" decode="false"></rich-text>
+  </view>
 </view>
-
-<view class="span" hover-class="none" hover-stop-propagation="false">
-  <span class="author">作者：{{desc.source}}</span>
-  <span class="date">日期： {{desc.date}}</span>
-
-  <rich-text class="text" nodes="{{content['1']}}" space="true" decode="false">
-    
-  </rich-text>
-    
+<!-- 配件详情 -->
+<view style="{{ state === 'desc' ? 'display: block' : 'display: none' }}" hover-class="none" hover-stop-propagation="false">
+  <view style="text-align: center" hover-class="none" hover-stop-propagation="false">
+    <image class="imgBox" src="https://img30.360buyimg.com/diytwo/{{text.imagePath}}" />
+  </view>
+  <view style="margin-left: 20px; font-weight: bold; width: 90%" hover-class="none" hover-stop-propagation="false">
+    <text style="color: red; font-size: 40rpx">￥{{text.price}}</text>
+    <text style="font-size: 30rpx;">{{text.name}}</text>
+    <text class="" selectable="false" space="false" decode="false">
+      {{text.phone}}
+      {{text.address}}
+    </text>
+  </view>
+</view>
+<!-- 选取list -->
+<view style="{{ state === 'goods' ? 'display: block' : 'display: none' }}" hover-class="none" hover-stop-propagation="false">
+  <scroll-view wx:for="{{text.goods}}" scroll-y style="height: 40px; width: 90%; margin:0 auto" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+    <!-- <view style="width: 100%; border-radius:8px;" id="green" class="scroll-view-item bc_list" data-id="{{item.id}}" bindtap="to">
+        <image style="width: 20%; height: 68%; line-height: 100px; margin-left: 10px; margin-top: 16px" src="{{item.pic}}" alt="预览图" />
+        <view style="width: 74%; float: right; margin-top: 16px">
+          <h5 style="font-size: 14px; font-weight: bold; color: '#1E1E1E'">{{item.title}}</h5>
+        </view>
+      </view> -->
+    <view style="border: 1px solid red; text-align: center" hover-class="none" hover-stop-propagation="false">
+      {{item.name}}
+    </view>
+  </scroll-view>
 </view>
