--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -22,3 +22,121 @@
 .usermotto {
   margin-top: 200px;
 }
+
+.components-image {
+  width: 100%;
+  height: 80px;
+  border-radius: 8px;
+}
+
+.check-components-image {
+  width: 100%;
+  height: 80px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 10px 0px #666666;
+}
+
+.out {
+  padding: 20px 10px;
+  width: 100%;
+  white-space: nowrap;
+  box-sizing: border-box;
+}
+
+.comp {
+  padding: 20px 10px;
+  width: 100%;
+  white-space: wrap;
+  box-sizing: border-box;
+}
+
+/*设置行内块*/
+
+.out .item {
+  width: 100px;
+  height: 80px;
+  background: white;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.comp .item {
+  width: 100%;
+  height: 80px;
+  background: white;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.inner {
+  border-radius: 8px;
+  /* overflow: hidden; */
+}
+
+.sp {
+  font-size: 30rpx;
+}
+
+.content {
+  border-radius: 8px;
+  /* overflow: hidden; */
+}
+
+view,
+text {
+  word-break: break-all;
+}
+
+.show {
+  border-radius: 8px;
+  overflow: hidden;
+}
+/* style="box-shadow:2px 1px 20px 9px #ccc;" */
+.image {
+  width: 25%;
+  height: 80px;
+  margin-top: 10px;
+  position: absolute;
+  margin-left: 20px;
+}
+
+.components-config {
+  height: 110px;
+  font-size: 27rpx;
+  border: 1px solid #cccccc;
+  margin-top: 30px;
+  /* line-height: 100px; */
+  color: #666666;
+}
+
+h2 {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.line {
+  margin: 0 auto;
+  width: 100%;
+  height: 1.5rpx;
+  background-color: #d8d8d8;
+}
+
+.name {
+  font-weight: 599;
+  width: 95%;
+  position: relative;
+  float: right;
+  margin-top: 5px;
+  display: -webkit-box;
+  font-size: 27rpx;
+  /* line-height: 40rpx; */
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.price {
+  font-weight: bold
+}
