--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -9,9 +9,16 @@
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
-  <view style="width: 90%">
-    <text style="font-weight: bold; float: left">我的心愿单</text>
-    <view wx:for="{{local}}" class="components-config" data-desc="{{item}}" bindtap="click">
+  <text style="font-weight: bold; float: left; width: 90%; margin-top: 10px">我的心愿单</text>
+  <view style="width: 90%; margin: 20px">
+    <scroll-view wx:for="{{local}}" class="" style="height: 110px; margin-top: 10px; " scroll-x="false" scroll-y="true">
+      <image class="image" src="{{item.src}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
+      <view class="" hover-class="none" hover-stop-propagation="false" style="float: right; width: 65%;">
+        <text class="name">{{item.name}}</text>
+        <text style="font-weight: bold; color: red">￥{{item.price}}</text>
+      </view>
+    </scroll-view>
+    <!-- <view wx:for="{{local}}" class="components-config" data-desc="{{item}}" bindtap="click">
       <image class="image" src="{{item.src}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload="" />
       <view style="width: 60%; float: right;">
         <text class="name">{{item.name}}</text>
@@ -19,6 +26,6 @@
           ￥{{item.price}}
         </text>
       </view>
-    </view>
+    </view> -->
   </view>
 </view>
