--- a/pages/read/index.wxss
+++ b/pages/read/index.wxss
@@ -10,11 +10,39 @@
 
 .title {
   font-size: 35rpx;
-  font-weight: bold
+  font-weight: bold;
 }
 
 .author {
   font-size: 25rpx;
+}
+
+.sv {
+  position: relative;
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.add_collect {
+  display: block;
+  border: 1px solid #666;
+  font-size: 30rpx;
+  color: #666;
+  line-height: 40px;
+  height: 40px;
+}
+
+.add_like {
+  display: block;
+  margin-top: 10px;
+  border: 1px solid #666;
+  font-size: 30rpx;
+  color: #666;
+  line-height: 40px;
+  height: 40px;
 }
 
 .date {
