--- a/pages/shop/index.wxss
+++ b/pages/shop/index.wxss
@@ -1,73 +1,9 @@
-.content {
-  position: relative;
+.log-list {
+  float: left;
+  display: flex;
+  flex-direction: column;
+  padding: 40rpx;
   width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-  color: #666666;
-  margin: 0 auto;
-}
-
-/* 左侧边栏盒子 */
-.nav_left {
-  /* display: inline-block; */
-  position:fixed;
-  top:0;
-  width: 25%;
-  height: 100%;
-  background: #ffffff;
-  text-align: center;
-  border: 1px solid #cccccc;
-}
-
-.nav_left .nav_left_items{
-  height: 30px;
-  line-height: 30px;
-  padding: 6px 0;
-  border-bottom: 1px solid #ffffff;
-  font-size: 14px;
-}
-
-.nav_left .nav_left_items.active{
-  background: #dedede;
-}
-
-.nav_right {
-  position: absolute;
-  top: 0;
-  right: 0;
-  flex: 1;
-  width: 70%;
-  height: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.nav_right_items {
-  height: 100px;
-}
-
-.nav_right_items_image {
-  height: 80px;
-  width: 40%;
-}
-
-.nav_right_items_msg {
-  position: absolute;
-  display: inline-block;
-  width: 55%;
-  height: 60px;
-  padding-top: 20px;
-  text-align: center;
-}
-
-.nav_right_items_name {
-  font-size: 25rpx;
-  display: block;
-}
-
-.nav_right_items_price {
-  font-weight: bold;
-  color: red;
 }
 
 .pickerBox {
