--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -21,12 +21,12 @@
       <span style="font-size: 13px; color: #ccc">为您推荐</span>
     </view>
     <scroll-view wx:for="{{news}}" scroll-y style="height: 110px; width: 90%; margin:0 auto" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-      <view style="width: 100%; border-radius:8px;" id="green" class="scroll-view-item bc_list" data-id="{{item.id}}" bindtap="to">
-        <image style="width: 20%; height: 68%; line-height: 100px; margin-left: 10px; margin-top: 16px" src="{{item.pic}}" alt="预览图" />
+      <view style="width: 100%; border-radius:8px;" id="green" class="scroll-view-item bc_list" data-id="{{item._id}}" bindtap="to">
+        <image style="width: 20%; height: 68%; line-height: 100px; margin-left: 10px; margin-top: 16px" src="https://www.xiamitt.xyz{{item.mainImg}}" alt="预览图" />
         <view style="width: 74%; float: right; margin-top: 16px">
           <text style="font-size: 14px; font-weight: bold; color: #1E1E1E;white-space: nowrap; display: inline-block;word-break: break-all;-webkit-box-orient: vertical;-webkit-line-clamp: 1;overflow: hidden; text-overflow: ellipsis;">{{item.title}}</text>
           <text style="position: relative; width: 100%; float: left; font-size: 25rpx; color: #666666">
-            {{item.source}}
+            {{item.updatedAt}}
           </text>
         </view>
       </view>
