--- a/pages/read/index.wxml
+++ b/pages/read/index.wxml
@@ -4,8 +4,10 @@
   </view>
   <view class="span" hover-class="none" hover-stop-propagation="false">
     <span class="author">作者：{{desc.source}}</span>
-    <span class="date">日期： {{desc.date}}</span>
-    <rich-text nodes="{{text}}" space="false" decode="false"></rich-text>
+    <span class="date">日期： {{desc.updatedAt}}</span>
+  </view>
+  <view style="width: 90%; margin: 0 auto; margin-top: 30px" hover-class="none" hover-stop-propagation="false">
+    <rich-text nodes="{{desc.text}}" space="true" decode="false"></rich-text>
   </view>
 </view>
 <!-- 配件详情 -->
@@ -40,7 +42,7 @@
 <!-- 选择产品 -->
 <view style="{{ state === 'select' ? 'display: block' : 'display: none' }}" hover-class="none" hover-stop-propagation="false">
   <view style="text-align: center" hover-class="none" hover-stop-propagation="false">
-    <image style="height: 150px; width: 200px" src="{{text.src}}" />
+    <image style="height: 150px; width: 200px" src="https://www.xiamitt.xyz{{text.img}}" />
   </view>
   <view style="margin-left: 20px; font-weight: bold;" hover-class="none" hover-stop-propagation="false">
     <text style="color: red; font-size: 40rpx; display: block">￥{{text.price}}</text>
@@ -49,7 +51,9 @@
   <view style="{{text.frequency ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
     <text style="font-size: 30rpx; display: block; margin-top: 20px">插槽类型：{{text.slot}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">CPU主频：{{text.frequency}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">动态加速频率：{{text.frequency1}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      动态加速频率：{{text.frequency1}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">三级缓存：{{text.threeCache}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">核心数量：{{text.inside}}</text>
   </view>
@@ -57,27 +61,40 @@
     <text style="font-size: 30rpx; display: block; margin-top: 20px">芯片组：{{text.chipset}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">插槽类型：{{text.slot}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">板型：{{text.motherboard}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">集成芯片：{{text.integratedChip}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      集成芯片：{{text.integratedChip}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">内存类型：{{text.ramType}}</text>
   </view>
   <view style="{{text.ramfrequency ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
     <text style="font-size: 30rpx; display: block; margin-top: 20px">内存容量：{{text.capacity}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">内存描述：{{text.desc}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">内存类型：{{text.type}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">内存主频：{{text.ramfrequency}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      内存主频：{{text.ramfrequency}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">工作电压：{{text.voltage}}</text>
   </view>
   <view style="{{text.hardDriveCapacity ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">硬盘容量：{{text.hardDriveCapacity}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">接口类型：{{text.interfaceType}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">转速：{{text.rotatingSpeed}}
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      硬盘容量：{{text.hardDriveCapacity}}
+    </text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      接口类型：{{text.interfaceType}}
+    </text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      转速：{{text.rotatingSpeed}}
     </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">缓存：{{text.cache}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">硬盘尺寸：{{text.size}}</text>
   </view>
   <view style="{{text.ramCapacity ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">存储容量：{{text.ramCapacity}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">接口类型：{{text.ramInterfaceType}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      存储容量：{{text.ramCapacity}}
+    </text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      接口类型：{{text.ramInterfaceType}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">读取速度：{{text.readSpeed}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">缓存：{{text.cache}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">硬盘尺寸：{{text.ramSize}}</text>
@@ -92,13 +109,19 @@
   <view style="{{text.displayType ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
     <text style="font-size: 30rpx; display: block; margin-top: 20px">屏幕尺寸：{{text.size}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">产品类型：{{text.type}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">面板类型：{{text.displayType}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">最佳分辨率：{{text.resolution}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      面板类型：{{text.displayType}}
+    </text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      最佳分辨率：{{text.resolution}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">背光类型：{{text.backlight}}</text>
   </view>
   <view style="{{text.boxtype ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
     <text style="font-size: 30rpx; display: block; margin-top: 20px">机箱类型：{{text.boxtype}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">机箱结构：{{text.boxStructure}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      机箱结构：{{text.boxStructure}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">理线功能：{{text.features}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">仓位：{{text.size}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">材质：{{text.material}}</text>
@@ -119,15 +142,23 @@
   </view>
   <view style="{{text.mouseInterface ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
     <text style="font-size: 30rpx; display: block; margin-top: 20px">适用类型：{{text.applicable}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">连接方式：{{text.connectionMethod}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">鼠标接口：{{text.mouseInterface}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      连接方式：{{text.connectionMethod}}
+    </text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      鼠标接口：{{text.mouseInterface}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">工作方式：{{text.work}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">鼠标大小：{{text.size}}</text>
   </view>
   <view style="{{text.kbInterface ? 'display: block; margin-left: 20px; color: #666;' : 'display: none'}}">
     <text style="font-size: 30rpx; display: block; margin-top: 20px">产品定位：{{text.position}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">连接方式：{{text.connectionMethod}}</text>
-    <text style="font-size: 30rpx; display: block; margin-top: 20px">键盘接口：{{text.kbInterface}}</text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      连接方式：{{text.connectionMethod}}
+    </text>
+    <text style="font-size: 30rpx; display: block; margin-top: 20px">
+      键盘接口：{{text.kbInterface}}
+    </text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">按键技术：{{text.button}}</text>
     <text style="font-size: 30rpx; display: block; margin-top: 20px">背光：{{text.backlight}}</text>
   </view>
